# xmonad-config

./: .gitignore  README.mkdn  build  cbiffle-xmonad-config.cabal  stack.yaml  xmobarrc-desktop  xmobarrc-laptop  xmobarrc-work-x1-carbon  xmobarrc.0  xmobarrc.1  xmonad.hs
img/: layout-tabbed.xbm  layout-tall.xbm  layout-terminal.xbm
lib/XMonad/Hooks/: Multibar.hs
lib/XMonad/Layout/: Terminal.hs
