name:                cbiffle-xmonad-config
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Cliff L. Biffle
maintainer:          code@cliffle.com
copyright:           2017 Cliff L. Biffle
category:            Web
build-type:          Simple
extra-source-files:  README.mkdn
cabal-version:       >=1.10

executable cbiffle-xmonad
  main-is:            xmonad.hs
  build-depends:      base, xmonad, xmonad-contrib, X11, containers
  default-language:   Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures
  hs-source-dirs:     . , lib
  other-modules:      XMonad.Hooks.Multibar
                    , XMonad.Layout.Terminal
